--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    </div>
  </section >
  <footer>
-  &copy;Masum Khandaker 2021, a programming hero initiative
+ <p> &copy;Masum Khandaker 2021, a programming hero initiative</p>
  </footer>
 </body>
 </html>
